--- a/server/public/teste.css
+++ b/server/public/teste.css
@@ -1,3 +1,90 @@
-p, li, h1 {
-    color: red;
+*{
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat",sans-serif;
+}
+
+body{
+  height: 99vh;
+  width: 98vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #a66f6f;
+}
+
+.text{
+  font-size: 60px;
+  color: #f1f1f1;
+  cursor: pointer;
+
+}
+:root {
+  --form_inclinacao: 25deg;
+  --form_inclinacao_: 20deg;
+
+  --heart_inclinacao: -25deg;
+  --heart_inclinacao_: -20deg;
+  --heart_size: 20vw;
+}
+
+.heart {
+  margin: 0px;
+  background-color: rgba(255, 10, 10, 0.199);
+  width: var(--heart_size);
+  height: var(--heart_size);
+  transform: rotate(-45deg);
+  position: relative;
+}
+.heart:before,
+.heart:after {
+  content: "";
+  background-color: rgba(255, 10, 10, 0.377);
+  border-radius: 50%;
+  width: var(--heart_size);
+  height: var(--heart_size);
+  position: absolute;
+}
+
+.heart:before {  top: -50%;}
+.heart:after { left: 50%; }
+
+
+.box{
+  width: 30%;
+  height: 10%;
+  background: #f19066;
+  margin: auto;
+  cursor: pointer;
+  animation: heartBeat 1.5s infinite;
+  transform: rotate(var(--heart_inclinacao));
+}
+
+.form{
+  color:black;
+  background-color: rgba(0, 0, 0, 0.301);
+  width: 90vw;
+  height: 70vh;
+  z-index: 9999;
+  position:absolute; 
+}
+ 
+@keyframes heartBeat{
+  from{
+    transform: scale(1) rotate(var(--heart_inclinacao));
   }
+  14%{
+    transform: scale(1.1) rotate(var(--heart_inclinacao_));
+  }
+  28%{
+    transform: scale(1) rotate(var(--heart_inclinacao));
+  }
+  42%{
+    transform: scale(1.1) rotate(var(--heart_inclinacao_));
+  }
+  70%{
+    transform: scale(1) rotate(var(--heart_inclinacao));
+  }
+}
+
+ 
