--- a/server/public/teste.css
+++ b/server/public/teste.css
@@ -5,16 +5,10 @@
 }
 
 body{
- 
- 
   display: flex;
   align-items: center;
   justify-content: center;
-
-  
 }
-
-
 
 :root {
   --form_inclinacao: 25deg;
@@ -22,24 +16,28 @@ body{
 
   --heart_inclinacao: -25deg;
   --heart_inclinacao_: -20deg;
-  --heart_size: 20vw;
+  --heart_size: 30px;
 }
 
 .heart {
-  margin: 0px;
-  
+  top:40px;
+  left:30px;
+
+  margin: 0px;  
   background-color: rgb(245, 78, 78);
   width: var(--heart_size);
   height: var(--heart_size);
   transform: rotate(-45deg);
-  position: relative;
 
+  position: relative;
   -moz-box-shadow: -3px -0px 40px rgb(146, 37, 37);
   -webkit-box-shadow:-3px -0px 40px rgb(146, 37, 37);
   box-shadow: -3px -0px 40px rgb(146, 37, 37);
-
   border-radius: 5%;
+
 }
+
+
 .heart:before, 
 .heart:after{
   content: "";
@@ -48,78 +46,77 @@ body{
   width: var(--heart_size);
   height: var(--heart_size);
   position: absolute;
-
 }
- 
-  
 .heart:before {  top: -50%;}
-.heart:after { left: 50%;}
+.heart:after { left: 50%;} 
 
- 
 
 .box{
-  width: 40%;
-  height: 40%;
-  padding: 150px;
+  display: flex;
+  left:10px;
+  top:10px;
+  width: 20px;
+  height: 20px;
 
-  margin: auto;
- 
+  /*
+  margin: 200px 0px 0px 0px;
+  /*margin: auto;
+  */
+
   animation: heartBeat 1.5s infinite;
   transform: rotate(var(--heart_inclinacao));
+  position: fixed;
+  z-index: 100;
 }
 
 .form{
+  margin: 140px 0px 0px 0px;
   color:black;
   text-align: center;
   background-color: rgba(199, 88, 88, 0.327);
   border-radius: 1%;
 
-  width: 90vw;
-  height: 70vh;
-  z-index: 9999;
-  position:absolute; 
+  width: 90%;
+  height: 70%;
+
+  z-index: 99;
 
   -moz-box-shadow: -3px -0px 40px rgb(146, 37, 37);
   -webkit-box-shadow:-3px -0px 40px rgb(146, 37, 37);
   box-shadow: -3px -0px 50px rgb(165, 103, 103);
-
 }
-/*
+ 
 footer{
   background: rgb(48, 8, 8);
   width: 100%;
   display: flex;
-
-  bottom: 0px;
-  position: fixed;
+  left:0px;
+  bottom:0px;
+  border:100px;
+  position:absolute; 
+  height: 200px;
+  transform: translateY(100%);
 }
-*/
+ 
 
 header{
-  background: rgb(216, 100, 100);
+  background: rgba(216, 100, 100,0.1);
   display: flex;
   position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
-  z-index: 99999;
+  height:  50px;
+  z-index: 99;
+  justify-content: center;
 }
  
+
 @keyframes heartBeat{
-  from{
-    transform: scale(1) rotate(var(--heart_inclinacao));
-  }
-  14%{
-    transform: scale(1.1) rotate(var(--heart_inclinacao_));
-  }
-  28%{
-    transform: scale(1) rotate(var(--heart_inclinacao));
-  }
-  42%{
-    transform: scale(1.1) rotate(var(--heart_inclinacao_));
-  }
-  70%{
-    transform: scale(1) rotate(var(--heart_inclinacao));
-  }
+  from{  transform: scale(1) rotate(var(--heart_inclinacao));    }
+  14%{   transform: scale(1.1) rotate(var(--heart_inclinacao_)); }
+  28%{   transform: scale(1) rotate(var(--heart_inclinacao));    }
+  42%{   transform: scale(1.1) rotate(var(--heart_inclinacao_)); }
+  70%{   transform: scale(1) rotate(var(--heart_inclinacao));    }
 }
 
