--- a/server/public/teste.css
+++ b/server/public/teste.css
@@ -46,6 +46,10 @@ body{
   width: var(--heart_size);
   height: var(--heart_size);
   position: absolute;
+
+  animation: heartColor 1.5s infinite;
+  
+
 }
 .heart:before {  top: -50%;}
 .heart:after { left: 50%;} 
@@ -64,13 +68,14 @@ body{
   */
 
   animation: heartBeat 1.5s infinite;
+
   transform: rotate(var(--heart_inclinacao));
   position: fixed;
   z-index: 100;
 }
 
 .form{
-  margin: 140px 0px 0px 0px;
+  margin: 140px 0px 100px 0px;
   color:black;
   text-align: center;
   background-color: rgba(199, 88, 88, 0.327);
@@ -84,8 +89,115 @@ body{
   -moz-box-shadow: -3px -0px 40px rgb(146, 37, 37);
   -webkit-box-shadow:-3px -0px 40px rgb(146, 37, 37);
   box-shadow: -3px -0px 50px rgb(165, 103, 103);
+
+  /*
+  text-align: left;
+  */
 }
  
+.form h1{
+  font-size: 30pt;
+ 
+ }
+ 
+ .form h2{
+  padding: 30px 0px 0px 0px;
+  
+ }
+ 
+  
+/* checkbox  */
+input[type="radio"]{
+  display: none;
+}
+
+.form label{
+  display: inline-block;
+}
+
+.red + label, .green + label{
+  font-size: 20px;
+  border-radius: 100px;
+  background: rgba(241, 239, 238, 0.867);
+  padding: 5px 15px ;
+  cursor: pointer;
+}
+
+input[type="number"] {
+  border-radius: 15px 15px 15px 15px;
+  font-size: 26pt;
+  width: 100px;
+  align-content: center;
+  background-color: transparent;
+  text-align:center;
+  padding-left:10px;
+ 
+}
+ 
+input[type="number"]:hover {
+  color: red;
+  background-color: white;
+  font-size: 30pt;
+}
+
+ 
+
+/*
+input[type="radio"]:checked + label{
+  font-size: 32px;
+  border-radius: 100px;
+  background: green;
+  padding: 5px 15px;
+  font-style: italic;
+  color: white;
+}
+*/
+.red:disabled + label, .green:disabled + label{
+  font-size: 20px;
+  border-radius: 100px;
+  background: rgba(123, 122, 124, 0.404);
+  padding: 5px 15px;
+}
+
+
+.green:checked + label{
+  font-size: 26px;
+  border-radius: 100px;
+  background: green;
+  padding: 5px 15px;
+  font-style: italic;
+  color: white;
+}
+
+.red:checked + label{
+  font-size: 26px;
+  border-radius: 100px;
+  background: rgb(250, 7, 7);
+  padding: 5px 15px;
+  font-style: italic;
+  color: white;
+}
+ 
+.laranja:checked + label{
+  font-size: 26px;
+  border-radius: 20px;
+  background: rgb(231, 141, 6);
+  font-style: italic;
+  color: white;
+  padding: 20px ;
+}
+
+.laranja + label{
+  font-size: 20px;
+  border-radius: 10px;
+  background: rgba(241, 239, 238, 0.867);
+  padding: 5px ;
+  cursor: pointer;
+}
+.img_input{
+  width: 100%;
+}
+
 footer{
   background: rgb(48, 8, 8);
   width: 100%;
@@ -113,10 +225,81 @@ header{
  
 
 @keyframes heartBeat{
-  from{  transform: scale(1) rotate(var(--heart_inclinacao));    }
+  from{  
+    transform: scale(1) rotate(var(--heart_inclinacao));    
+  }
   14%{   transform: scale(1.1) rotate(var(--heart_inclinacao_)); }
   28%{   transform: scale(1) rotate(var(--heart_inclinacao));    }
   42%{   transform: scale(1.1) rotate(var(--heart_inclinacao_)); }
   70%{   transform: scale(1) rotate(var(--heart_inclinacao));    }
 }
 
+
+@keyframes heartColor{
+  from{  
+    background: radial-gradient(rgb(218, 78, 78) , rgb(245, 78, 78) , rgb(245, 78, 78) ,rgb(245, 78, 78) );
+  }
+  14%{     }
+  28%{  
+    background: radial-gradient(rgb(218, 78, 78) , rgb(245, 78, 78) , rgb(245, 78, 78) ,rgb(245, 78, 78) );
+     }
+  42%{     }
+  70%{    }
+}
+
+
+
+ 
+/*
+  trackbar css
+*/
+
+.trackbarcontainer {
+  width: 100%; 
+}
+
+.label_tracker{
+  font-size: 16pt;
+  padding: 10px 0px 0px 20px;
+}
+.trackbar {
+  --trackbarColor: hsl(50, 100%, 50%);
+
+  -webkit-appearance: none;
+  appearance: none;
+  width: 75%; 
+  height: 40px; 
+  
+  outline: none; 
+  opacity: 0.7; 
+  -webkit-transition: .2s; 
+  transition: opacity .2s;
+
+
+  margin: 0px 20px 20px 20px;
+
+  border-radius: 4px;
+  margin-bottom: 15px;
+  background-color: rgb(200, 200, 200);
+}
+
+ 
+.trackbar:hover {
+  opacity: 1; 
+}
+
+.trackbar::-webkit-slider-thumb {
+  -webkit-appearance: none;  
+  width: 25px;  
+  height: 50px; 
+  background-color: var(--trackbarColor);
+  cursor: pointer;  
+}
+
+.trackbar::-moz-range-thumb {
+  width: 2px; 
+  height: 50px; 
+  background-color: var(--trackbarColor);
+  cursor: pointer;
+}
+.trackbar::-moz-focus-outer { border: 0; }
