--- a/server/public/teste.css
+++ b/server/public/teste.css
@@ -181,22 +181,22 @@ input[type="radio"]:checked + label{
 .laranja:checked + label{
   font-size: 26px;
   border-radius: 20px;
-  background: rgb(231, 141, 6);
+  background: rgb(108, 29, 145);
   font-style: italic;
   color: white;
-  padding: 20px ;
-}
+  padding: 10px ;
+  transform: scale(1.15);
+ }
 
 .laranja + label{
   font-size: 20px;
   border-radius: 10px;
   background: rgba(241, 239, 238, 0.867);
-  padding: 5px ;
+  padding: 10px ;
   cursor: pointer;
+  margin: 20px 0px 0px 0px;
 }
-.img_input{
-  width: 100%;
-}
+
 
 footer{
   background: rgb(48, 8, 8);
